2009-11-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting when auto-formatting is on.

2009-11-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug related to some table values.
	* FIxed crashing bug related to column sorting.

2009-11-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.1.

2009-10-31  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for loading ISBN list from file.

2009-10-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with the sort order not being saved.

2009-10-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that auto-formatting was not always applied.

2009-10-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed grouping to always show group for empty value.
	* Fixed crashing bug when filtering entry with empty title.
	* Fixed compilation for KDE < 4.2.
	* Fixed filtering bug when modifying entry value.

2009-10-10  Robby Stephenson  <robby@periapsis.org>

	* Added PAM/PRISM translator to SRU fetcher. 

2009-10-07  Robby Stephenson  <robby@periapsis.org>

	* Updated Amazon and Crossref search to no longer store key in the KWallet.

2009-10-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to allow multiple values in table columns.

2009-09-30  Robby Stephenson  <robby@periapsis.org>

	* Added Wine.com data source.

2009-09-29  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar import support for video games and board games.

2009-09-24  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb.com fetcher and Discogs fetcher to allow user access keys.

2009-09-23  Robby Stephenson  <robby@periapsis.org>

	* Updated the SRU fetcher to leave the response format empty.

2009-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash when exporting to HTML under certain conditions.
	* Removed the GCcfilms exporter and added the GCstar exporter.

2009-09-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed typo in DTD.
