@@ -1,3 +1,7 @@
+2009-11-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Changed webcam image preview to only appear when searching by ISBN or  UPC/EAN.
+
 2009-11-10  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed sorting when auto-formatting is on.
